*Empty MediaWiki Message*

--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -1,5 +1,5 @@
 [[Image:Nabi Misdaq.jpg|thumb|280px|ډاکټر نبي مصداق]]
-ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) (''انګرېزي: Dr. Nabi Misdaq'') يو افغان وګړپوه، سياسي شننونکی، ليکوال او د بي بي سي راډيو د پښتو څانګې لومړنی خبريال، بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو شمېر کتابونه کښلی چې د لوستونکو لخوا يې تود هرکلی شوی. ډاکټر مصداق په ۲۰۰۱ ز. کال کې له انګلستان نه امريکا ته کډه وکړه او له هماغه وخت نه د جورج مازون په پوهنتون کې او د ان لېنګوه ښوونځي کې د پښتو ژبې د ښوونکي په توګه دنده ترسره کوي. 
+ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) (''انګرېزي: Dr. Nabi Misdaq'') يو افغان وګړپوه، سياسي شننونکی، ليکوال او د بي بي سي راډيو د پښتو څانګې لومړنی خبريال، بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو شمېر کتابونه کښلی چې د لوستونکو لخوا يې تود هرکلی شوی. ډاکټر مصداق په ۲۰۰۱ ز. کال کې له انګلستان نه امريکا ته کډه وکړه او له هماغه وخت نه د جورج مازون په پوهنتون کې او د انلینګوا په ژبپوهنيز مرکز کې د پښتو ژبې د ښوونکي په توګه دنده ترسره کوي. 
 
 == مخينه ==
 نبي مصداق [[د پکتيا ولايت]] د ځاځيو ولسوالې په روقيان کې زيږدلی او د ځاځيو له يوې مشهورې کورنۍ نه دی. نيکه ېې باقي خان د امير عبد الرحمن نه د ځاځيو د يوه مشهور ملک په حيث د لارې د ساتلو په غرض تنخا اخيستله او امير به هم هره مياشت کورته چاي او بوره ورلېږل. د مصداق پلار مرحوم حاجي کهندل خان هم د امان اله خان په وخت کې د کابل ښار يو پيژندل شوی قراردادي وو چې د دارلامان قصر، د علي اباد د سناتوريم تعمير، د غازي ښوونځی او وروسته د ساينس فاکولتې تعميرونه ېې جوړ کړي دي. ډاکټر مصداق متاحل دی او دوه زامن لري عمر او يوسف چې دواړو ېې د لوړو زده کړو خاوندان دي او په خپلو څانګو کې ېې کتابونه هم ليکلي. خو کشری ځوی يې يو پېژندل شوی هنرمند هم دی.
@@ -18,12 +18,12 @@
 
 == دندې ==
 [[Image:NabiMisdaq.jpg|thumb|280px|ډاکټر نبي مصداق]]
-نبي مصداق د کمونستانو په دوره کې (بي، بي، سي) ته د کابل او روسانو خپرونې د افغانستان په باب اوريدلې او د نورو راديو ګانو تر څنګ ېې په انګليسي ژبه د (بي، بي، سي) د هر ورځينيو راپورونو لپاره ژباړلې. د افغانستان لپاره د کابل راديو او شوروي نشرات له ماسکو او تاجکستان نه مهم په دې وو چې له افغانستان نه ټول خارجي خبريالان ايستل شوي وو او د لويديخ په سفارتونو کې هم يواځې دوه با درې تنه به پاتي وو او نړۍ نه پوهيده چې افغانستان کې د کمونستانو د راتګ په دوره کې څه پيښيدل.  له نبي مصداق نه، وروسته له دؤ ويشتو مياشتو نه (بي، بي، سي) غوښتنه وکړه چې په لندن کې له (بوش هوس) نه چې د خارجي خپرونو مرکز دی، د پښتو ژبې خبرونې پيل کړي.   (بي، بي، سي) بلاخره  په اګست 1982 کې په پښتو ژبه چې کالونه ېې پاکستان مخالفت کاوه، پښتو خپرونه بيل کړه او مصداق ېې د لمړی ورځې نه بنسټ کيښود.  مصداق وروسته له تقريبا  شل کاله کار نه په (بي، بي، سي) کې بيرته پوهنتون ته ولاړ چې هغه ځنډمن شوې دوکتورې باندې له سره څېړنه پيل کړي. د زده کړې دا دوره هغه په خپل مصرف (د وګړپوهنې) په څانګه کې بشپړ کړه او د ميرمنې له فاميل سره د خپلو دو ځامنوسره واشنګتن ته په 2001 کې وکوچيد. 
+نبي مصداق د کمونستانو په دوره کې (بي، بي، سي) ته د کابل او روسانو خپرونې د افغانستان په باب اوريدلې او د نورو راديو ګانو تر څنګ ېې په انګليسي ژبه د (بي، بي، سي) د هر ورځينيو راپورونو لپاره ژباړلې. د افغانستان لپاره د کابل راديو او شوروي نشرات له ماسکو او تاجکستان نه مهم په دې وو چې له افغانستان نه ټول خارجي خبريالان ايستل شوي وو او د لويديخ په سفارتونو کې هم يواځې دوه با درې تنه به پاتي وو او نړۍ نه پوهيده چې افغانستان کې د کمونستانو د راتګ په دوره کې څه پيښيدل.  له نبي مصداق نه، وروسته له دؤ ويشتو مياشتو نه (بي، بي، سي) غوښتنه وکړه چې په لندن کې له (بوش هوس) نه چې د خارجي خپرونو مرکز دی، د پښتو ژبې خبرونې پيل کړي.   (بي، بي، سي) بلاخره  په اګست ۱۹۸۲ ز. کال کې په پښتو ژبه چې کالونه ېې پاکستان مخالفت کاوه، پښتو خپرونه بيل کړه او مصداق ېې د لمړی ورځې نه بنسټ کيښود.  مصداق وروسته له تقريبا  شل کاله کار نه په (بي، بي، سي) کې بيرته پوهنتون ته ولاړ چې هغه ځنډمن شوې دوکتورې باندې له سره څېړنه پيل کړي. د زده کړې دا دوره هغه په خپل مصرف د [[وګړپوهنه|وګړپوهنې]] په څانګه کې بشپړ کړه او د خپلې کورنۍ سره امريکا کې د واشنګټن ايالت ته وکوچيد. 
 
 == د ليکوالۍ ډګر ==
-مصداق په بي بي سي راډيو کې د وياندۍ له وختونو په ليکوالۍ او خبريالي چارو بوخت پاتې شوی. د هغه ګڼ شمېر ليکنې د آزادو مهاجرو په رسنيو کې کله په مستعارو نومونو او کله هم په آرني نوم په پښتو، انګرېزي او دري ژبو خپرې شوي. په ۱۹۹۷ ز. کال کې چې کله د احمد شاه دراني ۲۵۰ تلين ؤ نو د همدغې ورځې د لمانځلو په وياړ يې په انګرېزي ژبه خپل لومړنی کتاب خپور کړ چې سرليک يې ''د افغانستان لومړنی معاصر پاچا'' ټاکلی. تر دې وروسته يې خپل دويم اکادميک کتاب د افغانستان - سياسي کمزوري او خارجي مداخلې تر سرليک لاندې په لندن کې د روتلج خپرندويه ټولنې خپور کړ. همدا راز دا کتاب په نيويارک کې د دوهم ځل لپاره چاپ شوی چې د امريکا د پوهنتونو په کتابتونونو او  پوهنيزو مرکزونو کې هم موندل کېږي.
+مصداق په بي بي سي راډيو کې د وياندۍ له وختونو په ليکوالۍ او خبريالي چارو بوخت پاتې شوی. د هغه ګڼ شمېر ليکنې د آزادو مهاجرو په رسنيو کې کله په مستعارو نومونو او کله هم په آرني نوم په پښتو، انګرېزي او دري ژبو خپرې شوي. په ۱۹۹۷ ز. کال کې چې کله د احمد شاه دراني ۲۵۰ تلين ؤ نو د همدغې ورځې د لمانځلو په وياړ يې په انګرېزي ژبه خپل لومړنی کتاب خپور کړ چې سرليک يې ''د افغانستان لومړنی معاصر پاچا'' ټاکلی. تر دې وروسته يې خپل دويم اکادميک کتاب د ''افغانستان - سياسي کمزوري او خارجي مداخلت'' تر سرليک لاندې په لندن او په نيويارک کې د روتلج خپرندويو ټولنو لخوا خپور شوی. د دغو نومېدلو خپرندويو ټولنو د احصايې له مخې همدا کتاب له ۵۰۰ نه ډېرو پوهنتونو او علمي مراکزو د خپلو کتابتونونو لپاره اخيستی دی.
 
-په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم د دې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې 40 زرولغتو نه اوښتي ده ليکلې چې اوس تر چاپ لاندې ده.
+په افغانستان کې د امريکې په مداخلې سره پښتو ژبې زده کړې لپاره ليول تيا پيدا شوی چې مصداق هم د دې ليوالتيا نه (جې په تاريخ کې د پښتو د پرمختګ لپاره داسې نړۍ واله توجه بې سارې ښکاري) په استفادې سره يو لړ د پښتو اروپايي او امريکايي ژب پوهانو تربيه کړي اوهم  ېې د پښتو د زده کړې درسونه او کتابونه د انټرنټ لپاره ليکلي او ليکي.  په دې لړ کې مصداق د پښتو نه په انګليسي ژبه يوه لمړۍ جامع ډکشنري چې له ۴۰ زرو لغتونو اوښتې، ليکلې او اوس تر چاپ لاندې ده.
 
 == سرچينې ==
 *نبي مصداق - افغانستان: سياسي کمزوري او خارجي مداخلت ISBN 978-0415470247
