*Empty MediaWiki Message*

--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -1,5 +1,5 @@
 [[Image:Nabi Misdaq.jpg|thumb|280px|ډاکټر نبي مصداق]]
-ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) (''انګرېزي: Dr. Nabi Misdaq'') يو افغان وګړپوه، سياسي شننونکی، ليکوال او د بي بي سي راډيو د پښتو څانګې لومړنی خبريال، بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو شمېر کتابونه کښلی چې د لوستونکو لخوا يې تود هرکلی شوی. ډاکټر مصداق په ۲۰۰۱ ز. کال کې له انګلستان نه امريکا ته کډه وکړه او له هماغه وخت نه د جورج مازون په پوهنتون کې او د انلینګوا په ژبپوهنيز مرکز کې د پښتو ژبې د ښوونکي په توګه دنده ترسره کوي. 
+ډاکټر '''نبي مصداق''' (۱۹۴۴ ز.) (''انګرېزي: Dr. Nabi Misdaq'') يو افغان وګړپوه، سياسي شننونکی، ليکوال او د بي بي سي راډيو د پښتو څانګې لومړنی خبريال، بنسټ ايښودونکی او پخوانی وياند هم دی. نوموړي د افغانستان په اړه هم يو شمېر کتابونه کښلی چې د لوستونکو لخوا يې تود هرکلی شوی. ډاکټر مصداق په ۲۰۰۱ ز. کال کې له انګلستان نه امريکا ته کډه وکړه او له هماغه وخت نه يې د جورج مازون په پوهنتون کې، د ډيپلوماټيکې ژبپوهنې او د انلینګوا په ژبپوهنيزو مرکزونو کې د پښتو ژبې د ښوونکي په توګه دنده پر مخ بېولې. 
 
 == مخينه ==
 نبي مصداق [[د پکتيا ولايت]] د ځاځيو ولسوالې په روقيان کې زيږدلی او د ځاځيو له يوې مشهورې کورنۍ نه دی. نيکه ېې باقي خان د امير عبد الرحمن نه د ځاځيو د يوه مشهور ملک په حيث د لارې د ساتلو په غرض تنخا اخيستله او امير به هم هره مياشت کورته چاي او بوره ورلېږل. د مصداق پلار مرحوم حاجي کهندل خان هم د امان اله خان په وخت کې د کابل ښار يو پيژندل شوی قراردادي وو چې د دارلامان قصر، د علي اباد د سناتوريم تعمير، د غازي ښوونځی او وروسته د ساينس فاکولتې تعميرونه ېې جوړ کړي دي. ډاکټر مصداق متاحل دی او دوه زامن لري عمر او يوسف چې دواړو ېې د لوړو زده کړو خاوندان دي او په خپلو څانګو کې ېې کتابونه هم ليکلي. خو کشری ځوی يې يو پېژندل شوی هنرمند هم دی.
