--- a/نبي_مصداق.mw
+++ b/نبي_مصداق.mw
@@ -6,7 +6,8 @@
 
 == زده کړې ==
 === لومړنۍ زده کړې ===
-مصداق خپله ابتدايه زده کړه په طالقانو کې، چې مشر ورور ېې مرحوم درمرجان خان د قطغن او بدخشان د معارف مدير وو، شروع کړه او په شپږو مياشتو کې ېې لمړی او دوهم صنف ولوست او کابل کې دريم صنف ته په هماغه کال کې قبول شو. مصداق د کابل په نمره يو ابتدايه ښونځي کې به لمړی يا دوهم نمره تر شپږم ټولګي پورې کاميابيدو او په شپږم ټولکي کې وروسته د درې مياشتې او شپږ مياشتينې  ِازموينې نه د مريضې له امله د علي اباد په روغتون کې د دو مياشتو لپاره بستر شو،  خو د هغه درې مياشتنې او شپږ مياشتنې د نمرو د اوسط له مخې بيا هم شپږم نمره کامياب را ؤخوت. 
+هغه خپلې لومړنۍ زده کړې په [[طالقان|طالقانو]] کې، چې مشر ورور ېې مرحوم دُر مرجان خان د [[قطغن]] او [[د بدخشان ولايت|بدخشان]] د معارف مدير وو، پيل کړې او په شپږو مياشتو کې ېې لمړی او دوهم ټولګی ولوست بيا کابل ته ولاړ او هلته په دريم ټولګي کې ومنل شو. مصداق د کابل په نمره يو ابتدايه ښونځي کې به لمړی يا دوهم نمره تر شپږم ټولګي پورې کاميابيدو او په شپږم ټولکي کې وروسته د درې مياشتې او شپږ مياشتينې  ِازموينې نه د مريضې له امله د علي اباد په روغتون کې د دو مياشتو لپاره بستر شو،  خو د هغه درې مياشتنې او شپږ مياشتنې د نمرو د اوسط له مخې بيا هم شپږم نمره کامياب را ؤخوت.
+
 === دويمې زده کړې ===
 نبي مصداق خپلې دويمې زده کړې د رحمن بابا په ښونځي کې پېل کړي چې د نوموړی د همدغه ښوونځي د لومړۍ دورې له زده کوونکو څخه دی. هغه خپل د دولسم ټولګي بريليک له همدغه ښوونځي نه ترلاسه کړی او وروسته بيا د خپل يو ټولګيوال، هاشم تڼيوال، سره يوځای د لوړو زده کړو لپاره انګلستان ته ولېږل شو. 
 === لوړې زده کړې ===
