*Empty MediaWiki Message*

--- a/امير_عبدالرحمان_خان.mw
+++ b/امير_عبدالرحمان_خان.mw
@@ -1,22 +1,22 @@
-<table border="1" cellpadding="2" cellspacing="0" align="left" width="300px" style="margin-left:1em"> 
-<caption> 
-{| class="infobox bordered" style="width: 25em; font-size: 95%;" cellpadding="4"
-|-
-<font face="Pashto Kror Asiatype">
-|bgcolor="lightblue" align="center" colspan="2"  | '''امير عبدالرحمن خان'''
-|- 
-<font face="Pashto Kror Asiatype">
-| colspan="2" align="center" | [[Image:Abdulrahman.jpg|none|240px|امير عبدالرحمن خان]]
-|-
-<font face="Pashto Kror Asiatype">
-| '''د زېږېدو نېټه'''
-|''' '''
-|-
-<font face="Pashto Kror Asiatype">
-| '''د مړينې نېټه'''
-|''' ١٩٠١ زېږيز کال'''
-|}
-<font face="Tahoma">
+{{پاچا-مالوماتبکس
+  <!-- Scroll down to edit this page -->
+  <!-- د پاچايانو وېشنيزه -->
+|  هېواد = د افغانستان پاچا
+|  پېر             = 
+|  color           = #C0C4CE 
+
+  <!-- Image and Caption -->
+
+|  image_name      = Habbibullah.jpg
+|  image_caption   = امير عبدالرحمن خان
+
+  <!-- مالومات -->
+|  نوم = '''امير عبدالرحمن خان''' |
+|  زېږېدنه =  |دزېږون-ځای = [[]]
+|  مړينه =  ١٩٠١ زېږيز کال
+|دپاچاهۍ-دور
+ }}
+
 کله  چي  انګرېزانو  امير  عبدالرحمن  د  سردار  محمد  افضل  خان  زوی  د  تاشکند  څخه  راوغوښت  نو  يې  د  ده  سره  د  يو  شمېر  مرستو  قول  و  کړ  پدې  شرط  چي  که  دی  په  خارجي  سياست  کي  د  انګرېزانو  سره  مشوره  و  کړي .  امير  عبدالرحمن  هم  د  مجبوريت  له  مخي  قبوله  کړه .  دی  ډېر  تجربه  کاره  سړی  وو ،  دی  پوهېدئ  چي  د  قومي  خلکو  سره  څرنګه  چلند  و  کړي  او  هم  د  انګرېزانو  سره  څرنګه  په  خپله  ګټه  په  نرمي  چلند  و  کړي . 
 <br>
 ده  و  کولای  سوای  چي  د  څو  ورځو  په  مدت  کي  په  کابل  کي  امنيت  راولي  او  بيا  د  [[افغانستان ]] نورو  ښارونو  ته  متوجه  سو .  او  پدې  ترتيب  د  افغان  او  انګليس  دوهمه  جګړه  پای  ته  و  رسېده . 
