*Empty MediaWiki Message*

--- a/امير_عبدالرحمان_خان.mw
+++ b/امير_عبدالرحمان_خان.mw
@@ -7,7 +7,7 @@
 
   <!-- Image and Caption -->
 
-|  image_name      = Habbibullah.jpg
+|  image_name      = Abdulrahman.jpg
 |  image_caption   = امير عبدالرحمن خان
 
   <!-- مالومات -->
