*Empty MediaWiki Message*

--- a/امير_عبدالرحمان_خان.mw
+++ b/امير_عبدالرحمان_خان.mw
@@ -19,11 +19,11 @@
 
 کله  چي  انګرېزانو  امير  عبدالرحمن  د  سردار  محمد  افضل  خان  زوی  د  تاشکند  څخه  راوغوښت  نو  يې  د  ده  سره  د  يو  شمېر  مرستو  قول  و  کړ  پدې  شرط  چي  که  دی  په  خارجي  سياست  کي  د  انګرېزانو  سره  مشوره  و  کړي .  امير  عبدالرحمن  هم  د  مجبوريت  له  مخي  قبوله  کړه .  دی  ډېر  تجربه  کاره  سړی  وو ،  دی  پوهېدئ  چي  د  قومي  خلکو  سره  څرنګه  چلند  و  کړي  او  هم  د  انګرېزانو  سره  څرنګه  په  خپله  ګټه  په  نرمي  چلند  و  کړي . 
 <br>
-ده  و  کولای  سوای  چي  د  څو  ورځو  په  مدت  کي  په  کابل  کي  امنيت  راولي  او  بيا  د  [[افغانستان ]] نورو  ښارونو  ته  متوجه  سو .  او  پدې  ترتيب  د  افغان  او  انګليس  دوهمه  جګړه  پای  ته  و  رسېده . 
+ده  و  کولای  شول چي  د  څو  ورځو  په  مدت  کي  په  کابل  کي  امنيت  راولي  او  بيا  د  [[افغانستان ]] نورو  ښارونو  ته  پام شو .  او  پدې  ډول د  افغان  او  انګليس  دویمه  جګړه  پای  ته  و  رسېده . 
 <br>
 امير  عبدالرحمن  په  ډېر  لږ  وخت  کي  په  هيواد  کي  خپل  مخالفان  يا  له  مينځه  يوړه ،  يا  يې  بنديان  او  يا  يې  فراره  کړه . انګرېزانو  هم  د  ده  سره  مرستي  کولې .  په  ١٨٨٠ م  کال  کي  يې  پنځه  لکه  روپۍ ،  څو  سوه  توپونه  او  څو  زره  توپکان  امير  ته  ور  کړه  او  هر  کال  به  يې  ١٨٠٠٠  پونډه  مرسته  ور  سره  کوله .
 <br>
-ده  ډېر  ژر  ټوله  ښورښيان  لکه  د  غزني  غلجيان  او  د  منځني  افغانستان  هزاره ګان  د  ځان  تابع  کړه . د  سپاه  سالار  جنرال  غلام حيدر  خان  چرخي  په  واسطه  يې  د  هيواد  ټولي  هغه  برخي  چي  د  افغاني  دولت  له  لاسه  وتلي  وې  بيرته  په  لاس  راوړې .  په  نورستان  کي  يې  د  اسلام   دين  خپور  کړ  او  هغه  ځای  يې  د  نورستان  په  نامه  و  باله .  
+ده  ډېر  ژر  ټوله  بلواګر  لکه  د  غزني  غلجيان  او  د  منځني  افغانستان  هزاره ګان  د  ځان  تابع  کړه . د  سپاه  سالار  جنرال  غلام حيدر  خان  چرخي  په  واسطه  يې  د  هيواد  ټولي  هغه  برخي  چي  د  افغاني  دولت  له  لاسه  وتلي  وې  بيرته  په  لاس  راوړې .  په  نورستان  کي  يې  د  اسلام   دين  خپور  کړ  او  هغه  ځای  يې  د  نورستان  په  نامه  و  باله .  
 <br>
 امير   په  هيواد  کي  د  جاسوسۍ  دايره  جوړه  او  قوي  کړه ،  تکړه  قاضيان  يې  مقرر کړ ه،  د  پوستې  دفترونه  يې  خلاص  کړه ،  شرعي  محکمې  يې  د  سره  خلاصي  کړې ،  د  کابل  په  شاهي  مدرسه  کي  يې  ديني  عالمان  مقرر  کړه ،  چاپخانه  يې  بيا  خلاصه  کړه ،  په  کابل  کي  يې  د  توپک  جوړولو  فابرکه  په  کار  واچول .  د  ماليې  دفترونه  يې  خلاص کړه ، د  لارو  غله  يې  له  منځه  يوړه .
 <br>
