--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -130,8 +130,8 @@
 </div>
 
 == باندنۍ تړنې ==
-[http://scprd.com/hdra/view.php?id=23 د ارواښاد مولانا قيام الدين خادم ژوندليک]
-[http://www.bbc.co.uk/pashto/news/story/2008/09/080903_khadem-29-memorial.shtml د بي بي سي پښتو وېبپاڼه] - د قيام الدين خادم ۲۹ تلين ولمانځل شو.
+*[http://scprd.com/hdra/view.php?id=23 د ارواښاد مولانا قيام الدين خادم ژوندليک]
+*[http://www.bbc.co.uk/pashto/news/story/2008/09/080903_khadem-29-memorial.shtml د بي بي سي پښتو وېبپاڼه] - د قيام الدين خادم ۲۹ تلين ولمانځل شو.
 
 [[وېشنيزه: پښتانه]]
 [[وېشنيزه: پښتانه ليکوال]]
