--- a/بهايي.mw
+++ b/بهايي.mw
@@ -12,7 +12,7 @@
 دا لاروركه ډله د انګريزي استعمار په پير كې د
 نني [[ايران]] له خېټې څخه راوزېږېده. او د نړۍ
 
-[[Image:Bahai shrine.jpg|thumb|250px|په  حیفا (اسرائیل) كې د [[مقام اعلی]] په نامه سپېڅلې ودانۍ
+[[Image:Haifa BW 2.JPG|thumb|په  حیفا (اسرائیل) كې د [[مقام اعلی]] په نامه سپېڅلې ودانۍ
 ]]
 
 پر مخ خپره شوه. د خپلو ناوړه او بې لارې ګروهو 
