*Empty MediaWiki Message*

--- a/غازي_محمد_ايوب_خان.mw
+++ b/غازي_محمد_ايوب_خان.mw
@@ -1,3 +1,4 @@
+[[انځور:MohammadAyoubKhan.jpg|thumb|289px|غازي محمد ايوب خان]]
 [[انځور:SardarMuhammadAyoubKhan.JPG|thumb|289px|غازي محمد ايوب خان]]
 [[انځور:Ayub Khan.jpg|thumb|ايوب خان]]
 
