فارسی سازی ارقام

--- a/وينه.mw
+++ b/وينه.mw
@@ -20,16 +20,72 @@
 
 وينه په [[سږي|سږو]] او بدن کې د [[زړه]] په مرسته په اکرني غونډال کې پمپېږي. زړه ته د وينې د بېرته راستنېدو اضافي فشار بيا د جاذبې د ځواک او د هډتړ د عضلاتو د دندو په مرسته رامېنځ ته کېږي. په تيورو ژويو کې وينه د ليمف سره په يوه توازن کې ده، [[ليمف]] په پرله پسې توګه د وينې نه جوړ شوی (د کپېلري د ډېر چڼېدنې په پايله کې) چې بېرته وينې ته ورستنېږي (د [[توراسيک ډکټ]] له لارې). لېمفاوي اکر اکثراً د دوهم اکر په نامه هم ياد شوی.
 
+== د انساني وينې توکي ==
+
+وينه د بدن د تول ۷٪ برخه جوړوي،<ref name="alberts_table">{{Cite web|url=http://www.ncbi.nlm.nih.gov/sites/entrez?cmd=Search&db=books&doptcmdl=GenBookHL&rid=mboc4.table.4143|title=Leukocyte functions and percentage breakdown|accessdate=۲۰۰۷-۰۴-۱۴|publisher=NCBI Bookshelf|year=۲۰۰۵|author=Alberts, Bruce|work=Molecular Biology of the Cell}}</ref> چې منځوی غلاضت يې نژدې ۱۰۶۰&nbsp;کيلوګرامه/m<sup>۳</sup>، چې د خالصو اوبو غلاضت ۱۰۰۰&nbsp;کيلوګرامه/m<sup>۳</sup> ډېر نژدې دی.<ref>{{cite web | url = http://hypertextbook.com/facts/2004/MichaelShmukler.shtml | title = Density of Blood | accessdate = ۲۰۰۶-۱۰-۰۴ | year = ۲۰۰۴ | work=The Physics Factbook|last=Shmukler|first=Michael }}</ref> د يوه اوسطه بالغه فرد د وينې واليوم څه نا څه ۵ [[ليتره]] دی. وينه له پلازما او د ګڼو نورو سلولونو (چې اکثراً د ''کورپوسکلز'' په نامه هم يادېږي) نه چې د اېرېتروسايټونو ([[د وينې سره توکي]])، ليوکوسايټونو ([[د وينې سپين توکي]])، او د اېرېتروسايټونو ([[د وينې صحيفې]]) په نامه يادېږي، جوړه شوې. د واليوم له مخې په وينه کې د سره توکو کچه نژدې ۴۵٪ ده او د وينې پاتې ۵۵٪ د پلازما نه جوړه ده جې په دې کې لږه برخه د سپينو توکو کچه جوړوي.  
+
+Whole blood (plasma and cells) exhibits [[non-Newtonian fluid]] dynamics; its flow properties are adapted to flow effectively through tiny capillary blood vessels with less resistance than plasma by itself. In addition, if all human hemoglobin were free in the plasma rather than being contained in RBCs, the circulatory fluid would be too viscous for the cardiovascular system to function effectively.
+
+===سلولونه===
+{{See|Complete blood count}}
+One microliter of blood contains:
+*'''۴٫۷ to ۶٫۱ million (male), ۴٫۲ to ۵٫۴ million (female) [[erythrocyte]]s:'''<ref>{{cite web
+|url = http://www.nlm.nih.gov/medlineplus/ency/article/003644.htm#Normal%20Values
+|title = Medical Encyclopedia: RBC count|publisher = Medline Plus|dateformat = dmy|accessdate = ۱۸ November ۲۰۰۷
+}}</ref> In mammals, mature red blood cells lack a [[Cell nucleus|nucleus]] and [[organelle]]s. They contain the blood's [[hemoglobin]] and distribute oxygen. The red blood cells (together with [[endothelial]] vessel cells and other cells) are also marked by [[glycoprotein]]s that define the different [[Human blood group systems|blood types]]. The proportion of blood occupied by red blood cells is referred to as the [[hematocrit]], and is normally about ۴۵٪. The combined surface area of all red blood cells of the human body would be roughly ۲٬۰۰۰ times as great as the body's exterior surface.<ref>Martini, Frederic, et al (۲۰۰۶). ''Human Anatomy.'' ۵th ed. Page ۵۲۹. San Francisco, California: Pearson Education, Inc.  ISBN ۰-۸۰۵۳-۷۲۱۱-۳</ref> 
+*'''۴٬۰۰۰-۱۱٬۰۰۰ [[leukocyte]]s:'''<ref name = "Ganong WF">Ganong, William F.: "Review of medical physiology", twenty first edition, page ۵۱۸</ref> White blood cells are part of the [[immune system]]; they destroy and remove old or aberrant cells and cellular debris, as well as attack infectious agents ([[pathogens]]) and foreign substances. The cancer of leukocytes is called [[leukemia]].
+*'''۲۰۰٬۰۰۰-۵۰۰٬۰۰۰ thrombocytes:'''<ref name = "Ganong WF"/> [[thrombocyte]]s, also called [[platelet]]s, are responsible for blood clotting ([[coagulation]]). They change [[fibrinogen]] into [[fibrin]]. This fibrin creates a mesh onto which red blood cells collect and clot, which then stops more blood from leaving the body and also helps to prevent bacteria from entering the body.
+
+{| class="wikitable" align="right"
+|+ Constitution of normal blood
+|-
+!Parameter
+!Value
+|-
+| [[Hematocrit]] ||
+۴۵ ± ۷ (۳۸ &ndash; ۵۲٪) for males<br>
+۴۲ ± ۵ (۳۷ &ndash; ۴۷٪) for females
+|-
+| [[pH]] || ۷٫۳۵ &ndash; ۷٫۴۵
+|-
+| [[base excess]] || -۳ to +۳
+|-
+| P[[oxygen|O<sub>۲</sub>]] || ۱۰ &ndash; ۱۳ kPa (۸۰ &ndash; ۱۰۰ mm Hg)
+|-
+| P[[carbon dioxide|CO<sub>۲</sub>]] || ۴٫۸ &ndash; ۵٫۸ kPa (۳۵ &ndash; ۴۵ mm Hg)
+|-
+| [[Carbonic acid|HCO<sub>۳</sub><sup>-</sub>]] || ۲۱ mM &ndash; ۲۷ mM
+|-
+| Oxygen saturation ||
+Oxygenated: ۹۸ &ndash; ۹۹٪<br>
+Deoxygenated: ۷۵٪
+|}
+
+===پلازما===
+About ۵۵٪ of whole blood is [[blood plasma]], a fluid that is the blood's liquid medium, which by itself is straw-yellow in color.  The [[blood plasma]] volume totals of ۲٫۷ &ndash; ۳٫۰ litres in an average human. It is essentially an [[water|aqueous]] solution containing ۹۲٪ water, ۸٪ blood plasma [[protein]]s, and trace amounts of other materials.  Plasma circulates dissolved nutrients, such as [[glucose]], [[amino acids]], and [[fatty acids]] (dissolved in the blood or bound to plasma proteins), and removes waste products, such as, [[carbon dioxide]], [[urea]], and [[lactic acid]].
+
+Other important [[List of human blood components|components]] include:
+* [[Serum albumin]]
+* Blood-clotting factors (to facilitate [[coagulation]])
+* [[Immunoglobulins]] (antibodies)
+* [[lipoprotein]] particles
+* Various other [[protein]]s
+* Various [[electrolyte]]s (mainly [[sodium]] and [[chloride]])
+
+The term '''serum''' refers to plasma from which the clotting proteins have been removed. Most of the proteins remaining are albumin and [[antibody|immunoglobulins]].
+
+The normal [[pH]] of human arterial blood is approximately ۷٫۴۰ (normal range is ۷٫۳۵ &ndash; ۷٫۴۵), a weakly alkaline solution. Blood that has a pH below ۷٫۳۵ is too [[acidic]], whereas blood pH above ۷٫۴۵ is too [[alkaline]]. Blood pH, [[partial pressure]] of oxygen (pO<sub>۲</sub>), partial pressure of carbon dioxide (pCO<sub>۲</sub>), and [[Bicarbonate|HCO<sub>۳</sub>]] are carefully regulated by a number of [[homeostasis|homeostatic mechanisms]], which exert their influence principally through the [[respiratory system]] and the [[urinary system]] in order to control the [[Acid-base homeostasis|acid-base balance]] and respiration. Plasma also circulates [[hormone]]s transmitting their messages to various tissues. The list of normal [[Reference ranges for blood tests|reference ranges]] for various blood electrolytes is extensive.
+
 ==د تيورو ژويو د وينې اناتومي==
-Blood is composed of several kinds of cells (occasionally called ''corpuscles''); these ''formed elements'' of the blood constitute about 45% of whole blood by volume, mostly red blood cells. The other 55% is [[blood plasma]], a fluid that is the blood's liquid medium, appearing yellow in color. The proportion of blood occupied by red blood cells is referred to as the [[hematocrit]].[[Image:SEM blood cells.jpg|thumb|left|230px|A [[scanning electron microscope]] (SEM) image of normal circulating human blood. One can see [[red blood cell]]s, several [[white blood cell]]s including knobby [[lymphocyte]]s, a [[monocyte]], a [[neutrophil]], and many small disc-shaped [[platelet]]s.]]
-The normal [[pH]] of human arterial blood is approximately 7.40 (normal range is 7.35-7.45), a weak alkaline solution. Blood that has a pH below 7.35 is [[acidic]], while blood pH above 7.45 is [[alkaline]]. Blood pH along with arterial carbon dioxide tension (PaCO<sub>2</sub>) and [[Bicarbonate|HCO<sub>3</sub>]] readings are helpful in determining the acid-base balance of the body. The [[respiratory system]] and [[urinary system]] normally control the acid-base balance of blood as part of [[homeostasis]]. Blood is about 7% of the human body weight,<ref>[http://www.bloodcenters.org/aboutblood/bloodfacts.htm Bloodcenters.org]</ref> so the average adult has a blood volume of about 5 [[litre]]s, of which 2.7-3 litres is plasma. Human blood density is around 1060 kg/m³.<ref>{{cite web | url = http://hypertextbook.com/facts/2004/MichaelShmukler.shtml | title = Density of Blood | accessdate = 2006-10-04 | year = 2004 | publisher = [http://hypertextbook.com/facts/ The Physics Factbook] }}</ref> The combined surface area of all the red cells in the human body would be roughly 2,000 times as great as the body's exterior surface.{{fact}}
+Blood is composed of several kinds of cells (occasionally called ''corpuscles''); these ''formed elements'' of the blood constitute about ۴۵٪ of whole blood by volume, mostly red blood cells. The other ۵۵٪ is [[blood plasma]], a fluid that is the blood's liquid medium, appearing yellow in color. The proportion of blood occupied by red blood cells is referred to as the [[hematocrit]].[[Image:SEM blood cells.jpg|thumb|left|230px|A [[scanning electron microscope]] (SEM) image of normal circulating human blood. One can see [[red blood cell]]s, several [[white blood cell]]s including knobby [[lymphocyte]]s, a [[monocyte]], a [[neutrophil]], and many small disc-shaped [[platelet]]s.]]
+The normal [[pH]] of human arterial blood is approximately ۷٫۴۰ (normal range is ۷٫۳۵-۷٫۴۵), a weak alkaline solution. Blood that has a pH below ۷٫۳۵ is [[acidic]], while blood pH above ۷٫۴۵ is [[alkaline]]. Blood pH along with arterial carbon dioxide tension (PaCO<sub>۲</sub>) and [[Bicarbonate|HCO<sub>۳</sub>]] readings are helpful in determining the acid-base balance of the body. The [[respiratory system]] and [[urinary system]] normally control the acid-base balance of blood as part of [[homeostasis]]. Blood is about ۷٪ of the human body weight,<ref>[http://www.bloodcenters.org/aboutblood/bloodfacts.htm Bloodcenters.org]</ref> so the average adult has a blood volume of about ۵ [[litre]]s, of which ۲٫۷-۳ litres is plasma. Human blood density is around ۱۰۶۰ kg/m³.<ref>{{cite web | url = http://hypertextbook.com/facts/2004/MichaelShmukler.shtml | title = Density of Blood | accessdate = ۲۰۰۶-۱۰-۰۴ | year = ۲۰۰۴ | publisher = [http://hypertextbook.com/facts/ The Physics Factbook] }}</ref> The combined surface area of all the red cells in the human body would be roughly ۲٬۰۰۰ times as great as the body's exterior surface.{{fact}}
 
 The cells are:
-*''[[Red blood cell]]s or erythrocytes'' (96%). In mammals, mature red blood cells lack a [[Cell nucleus|nucleus]] and [[organelle]]s. They contain the blood's [[haemoglobin]] and distribute oxygen. The red blood cells (together with [[endothelial]] vessel cells and some other cells) are also marked by [[glycoprotein]]s that define the different [[Human blood group systems|blood types]].
-*''[[White blood cell]]s or leukocytes'' (3.0%), are part of the [[immune system]]; they destroy infectious agents, [[pathogens]].
-*''[[Platelet]]s or thrombocytes'' (1.0%) are responsible for blood clotting ([[coagulation]]). They change fibrinogen into fibrin. This fibrin creates a mesh onto which red blood cells collect and clot. This clot stops more blood from leaving the body and also helps to prevent bacteria from entering the body
+*''[[Red blood cell]]s or erythrocytes'' (۹۶٪). In mammals, mature red blood cells lack a [[Cell nucleus|nucleus]] and [[organelle]]s. They contain the blood's [[haemoglobin]] and distribute oxygen. The red blood cells (together with [[endothelial]] vessel cells and some other cells) are also marked by [[glycoprotein]]s that define the different [[Human blood group systems|blood types]].
+*''[[White blood cell]]s or leukocytes'' (۳٫۰٪), are part of the [[immune system]]; they destroy infectious agents, [[pathogens]].
+*''[[Platelet]]s or thrombocytes'' (۱٫۰٪) are responsible for blood clotting ([[coagulation]]). They change fibrinogen into fibrin. This fibrin creates a mesh onto which red blood cells collect and clot. This clot stops more blood from leaving the body and also helps to prevent bacteria from entering the body
 
-[[Blood plasma]] is essentially an [[water|aqueous]] solution containing 92% water, 8% blood plasma [[protein]]s, and trace amounts of other materials. Some components are:
+[[Blood plasma]] is essentially an [[water|aqueous]] solution containing ۹۲٪ water, ۸٪ blood plasma [[protein]]s, and trace amounts of other materials. Some components are:
 * [[Serum albumin]]
 * Blood clotting factors (to facilitate [[coagulation]])
 * [[Immunoglobulins]] (antibodies)
