--- a/وينه.mw
+++ b/وينه.mw
@@ -22,7 +22,7 @@
 
 == د انساني وينې توکي ==
 
-وينه د بدن د تول ۷٪ برخه جوړوي،<ref name="alberts_table">{{Cite web|url=http://www.ncbi.nlm.nih.gov/sites/entrez?cmd=Search&db=books&doptcmdl=GenBookHL&rid=mboc4.table.4143|title=Leukocyte functions and percentage breakdown|accessdate=۲۰۰۷-۰۴-۱۴|publisher=NCBI Bookshelf|year=۲۰۰۵|author=Alberts, Bruce|work=Molecular Biology of the Cell}}</ref> چې منځوی غلاضت يې نژدې ۱۰۶۰&nbsp;کيلوګرامه/m<sup>۳</sup>، چې د خالصو اوبو غلاضت ۱۰۰۰&nbsp;کيلوګرامه/m<sup>۳</sup> ډېر نژدې دی.<ref>{{cite web | url = http://hypertextbook.com/facts/2004/MichaelShmukler.shtml | title = Density of Blood | accessdate = ۲۰۰۶-۱۰-۰۴ | year = ۲۰۰۴ | work=The Physics Factbook|last=Shmukler|first=Michael }}</ref> د يوه اوسطه بالغه فرد د وينې واليوم څه نا څه ۵ [[ليتره]] دی. وينه له پلازما او د ګڼو نورو سلولونو (چې اکثراً د ''کورپوسکلز'' په نامه هم يادېږي) نه چې د اېرېتروسايټونو ([[د وينې سره توکي]])، ليوکوسايټونو ([[د وينې سپين توکي]])، او د اېرېتروسايټونو ([[د وينې صحيفې]]) په نامه يادېږي، جوړه شوې. د واليوم له مخې په وينه کې د سره توکو کچه نژدې ۴۵٪ ده او د وينې پاتې ۵۵٪ د پلازما نه جوړه ده جې په دې کې لږه برخه د سپينو توکو کچه جوړوي.  
+وينه د بدن د تول ۷٪ برخه جوړوي،<ref name="alberts_table">{{Cite web|url=http://www.ncbi.nlm.nih.gov/sites/entrez?cmd=Search&db=books&doptcmdl=GenBookHL&rid=mboc4.table.4143|title=Leukocyte functions and percentage breakdown|accessdate=۲۰۰۷-۰۴-۱۴|publisher=NCBI Bookshelf|year=۲۰۰۵|author=Alberts, Bruce|work=Molecular Biology of the Cell}}</ref> چې منځوی غلاضت يې نژدې ۱۰۶۰&nbsp;کيلوګرامه/متر<sup>۳</sup>، چې د خالصو اوبو غلاضت ۱۰۰۰&nbsp;کيلوګرامه/متر<sup>۳</sup> ډېر نژدې دی.<ref>{{cite web | url = http://hypertextbook.com/facts/2004/MichaelShmukler.shtml | title = Density of Blood | accessdate = ۲۰۰۶-۱۰-۰۴ | year = ۲۰۰۴ | work=The Physics Factbook|last=Shmukler|first=Michael }}</ref> د يوه اوسطه بالغه فرد د وينې واليوم څه نا څه ۵ [[ليتره]] دی. وينه له پلازما او د ګڼو نورو سلولونو (چې اکثراً د ''کورپوسکلز'' په نامه هم يادېږي) نه چې د اېرېتروسايټونو ([[د وينې سره توکي]])، ليوکوسايټونو ([[د وينې سپين توکي]])، او د اېرېتروسايټونو ([[د وينې صحيفې]]) په نامه يادېږي، جوړه شوې. د واليوم له مخې په وينه کې د سره توکو کچه نژدې ۴۵٪ ده او د وينې پاتې ۵۵٪ د پلازما نه جوړه ده جې په دې کې لږه برخه د سپينو توکو کچه جوړوي.  
 
 Whole blood (plasma and cells) exhibits [[non-Newtonian fluid]] dynamics; its flow properties are adapted to flow effectively through tiny capillary blood vessels with less resistance than plasma by itself. In addition, if all human hemoglobin were free in the plasma rather than being contained in RBCs, the circulatory fluid would be too viscous for the cardiovascular system to function effectively.
 
