--- a/انزايم.mw
+++ b/انزايم.mw
@@ -411,6 +411,7 @@ Enzymes are used in the [[chemical industry]] and other industrial applications 
 {{Link FA|it}}
 {{Link FA|zh}}
 
+[[an:Enzima]]
 [[ar:إنزيم]]
 [[bat-smg:Ferments]]
 [[bg:Ензим]]
