--- a/قرآن_کریم.mw
+++ b/قرآن_کریم.mw
@@ -147,8 +147,9 @@
 # المخل لدراسه القرآن الكريم. ليكوال: ډاكټر محمد بن محمد ابو شهب. چاپځاى: مكتبه السنه- الدار السلفيه لنشر العلم- القاهره- ۸۱ شارع البستان- ميدان عابدين. 
 # مناهل العرفان في علوم القرآن، 
 # تعارف مذاهب عالم، ليكوال: ډاكټر اېس. اېم شاهد- سركلر روډ اردو بازار لاهور
-# www.ar.wikipedia.org
-# www.islamonline.net
+# [http://ar.wikipedia.org ar.wikipedia.org]
+# [http://www.islamonline.net www.islamonline.net]
+# [http://www.irfan-ul-quran.com www.irfan-ul-Quran.com]
 
 [[وېشنيزه:اسماني کتابونه]]
 [[وېشنيزه:ديني ليکنې]]
