--- a/هېموسېدرين.mw
+++ b/هېموسېدرين.mw
@@ -15,3 +15,11 @@
 د بدن په هغه ناروغيو کې چې وسپنه له نورمالې کچې لوړېږي د هېموسېډرين د راغونډېدو شونتيا ډېروي. دا داسې اوږدمهالې ناروغۍ دي چې اکثراً د وينې د ورکړې اړتيا په کې وي، لکه د سېکل سلول د وينې د کمښت ناروغۍ او تالاسېميا.
  
 == سرچينې ==
+
+
+
+
+
+
+
+[[en:Hemosidrine]]
