--- a/هېموسېدرين.mw
+++ b/هېموسېدرين.mw
@@ -23,5 +23,11 @@
 
 
 
-
+[de:Hämosiderin]]
 [[en:Hemosiderin]]
+[[fr:Hémosidérine]]
+[[it:Emosiderina]]
+[[nl:Hemosiderine]]
+[[ja:ヘモジデリン]]
+[[pt:Hemossiderina]]
+[[ru:Гемосидерин]]
