--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -108,7 +108,7 @@
 
 == د شعر بېلګه ==
 <center>
-د شاعر مسلک
+=== د شاعر مسلک ===
 {{شعر}}
 {{ب|صــحـــيــح لاره بـــه ښــايــم کــه وم وم که نه وم نه وم|رښتـيـا رښتـيـا به وايم که وم وم که نه وم نه وم}}
 {{ب|د حــق د پــيــروۍ نه مې بل څــه په زړه کــې نـشــتــه|چـې څـه يـم همـدا يم که وم وم که نه وم نه وم}}
