--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -1,7 +1,23 @@
 '''قيام الدين خادم''' (زېږېدنه: ۱۲۷۴ ل. - مړينه: ۱۳۵۸ ل.) (''انګرېزي:Qyamudeen Khadem'') يو افغان ژورناليست، پياوړى [[ليكوال]]، ويښ [[شاعر]]، اديب او د فلسفي اندونو يو پوه عالم ؤ. نوموړی په پښتو ادب کې يو ځانګړی ځای لري او په همدې سبب هغه د پښتو ژبې او ادب د ځلانده ستورو څخه يو ستوری ګڼل کېږي. هغه د پښتو ژبې او ادب په باب په زړه پوري منظوم او منثور آثار ليكلي. د ادبي هلو ځلو تر څنګ نوموړی په سياست کې هم ښکېل وه او د ويښ زلميانو د ګوند د بنسټ ايښودونکو غړو له ډلې نه ؤ.
 
 == مخينه ==
-قيام الدين خادم په ۱۲۸۶ لمريز کال [[د کامې ولسوالۍ]] په يوې روحاني کورنۍ کې دنيا ته سترګې پرانيستي دي . د ارواښاد خادم پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کې يو مشهور او پوه عالم و.<ref>'''اوسني ليکوال''' - د [[عبدالروف بېنوا]] اثر - لومړی ټوک، د چاپکال ۱۳۴۰ - ۲۹۲ مخ.</ref> خادم صاحب دوه نيم کاله په لواړگي کې اوسېده ،همدلته د شاعرۍ ،ليکوالۍ او ادبياتو سره د هغه مرموزې لېوالتياوې راوټوکېدې، بيا په لواړګي کې پاتې شو او هماغلته يې کوزده او واده وکړ.
+قيام الدين خادم په ۱۲۸۶ لمريز کال [[د کامې ولسوالۍ]] په يوې روحاني کورنۍ کې دنيا ته سترګې پرانيستي دي . د ارواښاد خادم پلار مرحوم ملا حسام الدين اخوند پخپله سيمه کې يو مشهور او پوه عالم و.<ref>'''اوسني ليکوال''' - د [[عبدالروف بېنوا]] اثر - لومړی ټوک، د چاپکال ۱۳۴۰ - ۲۹۲ مخ.</ref> خادم صاحب دوه نيم کاله په لواړگي کې اوسېده ،همدلته د شاعرۍ ،ليکوالۍ او ادبياتو سره د هغه مرموزې لېوالتياوې راوټوکېدې، بيا په لواړګي کې پاتې شو او هماغلته يې کوزده او واده وکړ. قيام الدين خادم د خپل د اصل او نصب په اړه پخپل يوه شعر کې داسې وايي:
+<center>
+=== تعارف ===
+{{شعر}}
+{{ب|د پلار د پلار لخوا لمسی د ''ميا عمر'' يمه زه|د پلار د مور نه د ''آخوند بابا'' پسر يمه زه}}
+{{ب|مور مې له پلاره د ''فقير صاحب'' نصب ته رسي|د مور له موره د ''خواجه احرار'' ځيګر يمه زه}}
+{{ب|د ''ميا عمر صاحب'' زيارت په څمکنيو کې دی|''فقير صاحب'' د کامې بره خوا خښيو کې دی}}
+{{ب|''آخوند بابا'' دی په [[د کونړ ولايت|کونړ]]، ''خواجه احرار'' په [[د هرات ولايت|هرات]]|''خادم'' د دغه صاحبانو په لمسيو کې دی}}
+{{ب|''فقير صاحب''، ''عبدالرحمان سېلاني'' يادېږي|د ده فرزند ''صاحبزاده مُراد علي'' نومېږي}}
+{{ب|په پښتنو کې ''ميا عمر'' دی په رښتيا منلی|د ده فرزند او خليفه ''محمدي'' يادېږي}}
+{{ب|''محمدي  صاحبزاده'' ؤ لوی شاعر د پښتو|''مُراد علي  صاحبزاده''  ؤ مفسر د پښتو}}
+{{ب|د پلار و موره ميراثه را له پښتو پاتې ده|''خادم'' به و نه مني هېڅ منکر د پښتو}}
+{{ب|يمه ''خادم'' کله مې ځانته ''سېلاني'' وييلی|کله مې ځان په ''احراري''،  ''مياعمري'' ښوولی}}
+{{ب|پلار مې د شګې په زاخېلو کې خاړپوڅې کړي|پدې لحاظ مې کله ځان ''زاخېلي'' بللی}}
+{{ب|د علم او فقر په ځانګو کې زېږېدلی يمه|له ابتداء نه پدې لاره باندې تللی يمه}}
+{{د شعر پای}}
+</center>
 
 == زده کړې ==
 لومړنۍ زده کړې يې پخپل کور کې د خپلو والدينو څخه تر سره کړي دي . خادم صاحب د اسلامي علومو ګڼ شمير کتابونه لوستي وه؛ هغه صرف ،نحوه ،منطق حکمت ،فقه ،حديث ، تفسير او د نور دوديزو علومو زده کړه يې ترلاسه کړې وه. هغه د ديني پوهې د ترلاسه کولو لپاره 15 کاله په هيواد کې دننه او له هيواد نه دباندې سفرونه کړي دي .
