--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -8,7 +8,7 @@
 {{ب|د پلار د پلار لخوا لمسی د ''ميا عمر'' يمه زه|د پلار د مور نه د ''آخوند بابا'' پسر يمه زه}}
 {{ب|مور مې له پلاره د ''فقير صاحب'' نصب ته رسي|د مور له موره د ''خواجه احرار'' ځيګر يمه زه}}
 {{ب|د ''ميا عمر صاحب'' زيارت په څمکنيو کې دی|''فقير صاحب'' د کامې بره خوا خښيو کې دی}}
-{{ب|''آخوند بابا'' دی په [[د کونړ ولايت|کونړ]]، ''خواجه احرار'' په [[د هرات ولايت|هرات]]|''خادم'' د دغه صاحبانو په لمسيو کې دی}}
+{{ب|''آخوند بابا'' دی په [[د کنړ ولايت|کنړ]]، ''خواجه احرار'' په [[د هرات ولايت|هرات]]|''خادم'' د دغه صاحبانو په لمسيو کې دی}}
 {{ب|''فقير صاحب''، ''عبدالرحمان سېلاني'' يادېږي|د ده فرزند ''صاحبزاده مُراد علي'' نومېږي}}
 {{ب|په پښتنو کې ''ميا عمر'' دی په رښتيا منلی|د ده فرزند او خليفه ''محمدي'' يادېږي}}
 {{ب|''محمدي  صاحبزاده'' ؤ لوی شاعر د پښتو|''مُراد علي  صاحبزاده''  ؤ مفسر د پښتو}}
