--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -5,17 +5,17 @@
 <center>
 === تعارف ===
 {{شعر}}
-{{ب|د پلار د پلار لخوا لمسی د ''ميا عمر'' يمه زه|د پلار د مور نه د ''آخوند بابا'' پسر يمه زه}}
-{{ب|مور مې له پلاره د ''فقير صاحب'' نصب ته رسي|د مور له موره د ''خواجه احرار'' ځيګر يمه زه}}
-{{ب|د ''ميا عمر صاحب'' زيارت په څمکنيو کې دی|''فقير صاحب'' د کامې بره خوا خښيو کې دی}}
-{{ب|''آخوند بابا'' دی په [[د کنړ ولايت|کنړ]]، ''خواجه احرار'' په [[د هرات ولايت|هرات]]|''خادم'' د دغه صاحبانو په لمسيو کې دی}}
-{{ب|''فقير صاحب''، ''عبدالرحمان سېلاني'' يادېږي|د ده فرزند ''صاحبزاده مُراد علي'' نومېږي}}
-{{ب|په پښتنو کې ''ميا عمر'' دی په رښتيا منلی|د ده فرزند او خليفه ''محمدي'' يادېږي}}
-{{ب|''محمدي  صاحبزاده'' ؤ لوی شاعر د پښتو|''مُراد علي  صاحبزاده''  ؤ مفسر د پښتو}}
-{{ب|د پلار و موره ميراثه را له پښتو پاتې ده|''خادم'' به و نه مني هېڅ منکر د پښتو}}
-{{ب|يمه ''خادم'' کله مې ځانته ''سېلاني'' وييلی|کله مې ځان په ''احراري''،  ''مياعمري'' ښوولی}}
+{{ب|د پلار د پلار لـخـوا لـمسـی د ''مـيا عـمـر'' يـمـه زه|د پلار د مور نه د ''آخوند بابا'' پسر يمه زه}}
+{{ب|مور مې له پلاره د ''فـقير صاحب'' نصـب ته رسي|د مور له موره د ''خواجه احرار'' ځيګر يمه زه}}
+{{ب|د ''ميـا عـمـر صاحب'' زيارت په څـمـکـنـيـو کې دی|''فقير صاحب'' د کامې بره خوا خښيو کې دی}}
+{{ب|''آخـونـد بـابـا'' دی په [[د کنړ ولايت|کـنـړ]]، ''خواجه احـرار'' په [[د هرات ولايت|هرات]]|''خادم'' د دغه صاحبانو په لمسيو کې دی}}
+{{ب|''فـقـيـر صـاحـب''، ''عبـدالـرحـمان سېـلانـي'' يادېږي|د ده فرزند ''صاحبزاده مُراد علي'' نومېږي}}
+{{ب|په پښتنو کې ''ميـا عـمـر'' دی په رښـتـيـا منـلـی|د ده فرزند او خليفه ''محمدي'' يادېږي}}
+{{ب|''مـحـمـدي  صـاحـبـزاده'' ؤ لوی شـاعـر د پـښـتـو|''مُراد علي  صاحبزاده''  ؤ مفسر د پښتو}}
+{{ب|د پـلار و مـوره مـيـراثـه را لـه پـښـتـو پـاتـې ده|''خادم'' به و نه مني هېڅ منکر د پښتو}}
+{{ب|يمه ''خـادم'' کله مې ځـانـتـه ''سـېـلانـي'' ويـيـلـی|کله مې ځان په ''احراري''،  ''مياعمري'' ښوولی}}
 {{ب|پلار مې د شګې په زاخېلو کې خاړپوڅې کړي|پدې لحاظ مې کله ځان ''زاخېلي'' بللی}}
-{{ب|د علم او فقر په ځانګو کې زېږېدلی يمه|له ابتداء نه پدې لاره باندې تللی يمه}}
+{{ب|د علـم او فـقـر په ځـانـګـو کې زېـږېـدلـی يـمـه|له ابتداء نه پدې لاره باندې تللی يمه}}
 {{د شعر پای}}
 </center>
 
