Undo revision 49853 by [[Special:Contributions/82.139.171.141|82.139.171.141]] ([[User talk:82.139.171.141|Talk]])

--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -5,16 +5,16 @@
 <center>
 === تعارف ===
 {{شعر}}
-{{ب|د پلار د پلار لـخـوا لـمسـی د '''''مـيا عـمـر''''' يـمـه زه|د پلار د مور نه د '''''آخوند بابا''''' پسر يمه زه}}
-{{ب|مور مې له پلاره د '''''فـقير صاحب''''' نصـب ته رسي|د مور له موره د '''''خواجه احرار''''' ځيګر يمه زه}}
-{{ب|د '''''ميـا عـمـر صاحب''''' زيارت په څـمـکـنـيـو کې دی|'''''فقير صاحب''''' د کامې بره خوا خښيو کې دی}}
-{{ب|'''''آخـونـد بـابـا''''' دی په [[د کنړ ولايت|کـنـړ]]، '''''خواجه احـرار''''' په [[د هرات ولايت|هرات]]|'''''خادم''''' د دغه صاحبانو په لمسيو کې دی}}
-{{ب|'''''فـقـيـر صـاحـب'''''، '''''عبـدالـرحـمان سېـلانـي''''' يادېږي|د ده فرزند '''''صاحبزاده مُراد علي''''' نومېږي}}
-{{ب|په پښتنو کې '''''ميـا عـمـر''''' دی په رښـتـيـا منـلـی|د ده فرزند او خليفه '''''محمدي''''' يادېږي}}
-{{ب|'''''مـحـمـدي  صـاحـبـزاده''''' ؤ لوی شـاعـر د پـښـتـو|'''''مُراد علي  صاحبزاده'''''  ؤ مفسر د پښتو}}
-{{ب|د پـلار و مـوره مـيـراثـه را لـه پـښـتـو پـاتـې ده|'''''خادم''''' به و نه مني هېڅ منکر د پښتو}}
-{{ب|يمه '''''خـادم''''' کله مې ځـانـتـه '''''سـېـلانـي''''' ويـيـلـی|کله مې ځان په '''''احراري'''''،  '''''مياعمري''''' ښوولی}}
-{{ب|پلار مې د شګې په زاخېلو کې خاړپوڅې کړي|پدې لحاظ مې کله ځان '''''زاخېلي''''' بللی}}
+{{ب|د پلار د پلار لـخـوا لـمسـی د ''مـيا عـمـر'' يـمـه زه|د پلار د مور نه د ''آخوند بابا'' پسر يمه زه}}
+{{ب|مور مې له پلاره د ''فـقير صاحب'' نصـب ته رسي|د مور له موره د ''خواجه احرار'' ځيګر يمه زه}}
+{{ب|د ''ميـا عـمـر صاحب'' زيارت په څـمـکـنـيـو کې دی|''فقير صاحب'' د کامې بره خوا خښيو کې دی}}
+{{ب|''آخـونـد بـابـا'' دی په [[د کنړ ولايت|کـنـړ]]، ''خواجه احـرار'' په [[د هرات ولايت|هرات]]|''خادم'' د دغه صاحبانو په لمسيو کې دی}}
+{{ب|''فـقـيـر صـاحـب''، ''عبـدالـرحـمان سېـلانـي'' يادېږي|د ده فرزند ''صاحبزاده مُراد علي'' نومېږي}}
+{{ب|په پښتنو کې ''ميـا عـمـر'' دی په رښـتـيـا منـلـی|د ده فرزند او خليفه ''محمدي'' يادېږي}}
+{{ب|''مـحـمـدي  صـاحـبـزاده'' ؤ لوی شـاعـر د پـښـتـو|''مُراد علي  صاحبزاده''  ؤ مفسر د پښتو}}
+{{ب|د پـلار و مـوره مـيـراثـه را لـه پـښـتـو پـاتـې ده|''خادم'' به و نه مني هېڅ منکر د پښتو}}
+{{ب|يمه ''خـادم'' کله مې ځـانـتـه ''سـېـلانـي'' ويـيـلـی|کله مې ځان په ''احراري''،  ''مياعمري'' ښوولی}}
+{{ب|پلار مې د شګې په زاخېلو کې خاړپوڅې کړي|پدې لحاظ مې کله ځان ''زاخېلي'' بللی}}
 {{ب|د علـم او فـقـر په ځـانـګـو کې زېـږېـدلـی يـمـه|له ابتداء نه پدې لاره باندې تللی يمه}}
 {{د شعر پای}}
 </center>
