--- a/کمبودیا.mw
+++ b/کمبودیا.mw
@@ -3,7 +3,7 @@
 اصلي نوم = [[Image:Official_name_of_Cambodia.png]]<br> Preăh Réachéanachâkr Kâmpŭchea |
 عام نوم = Cambodia |
 بېرغ = Flag of Cambodia.svg |
-نښان = |
+نښان =Royal Arms of Cambodia.svg |
 نخشه = LocationCambodia.png |
 national_motto = [[Image:Kh-Motto.png|170px]]<br>(Khmer: Nation, Religion, King) |
 ملي سرود = [[Nokoreach]] |
