--- a/ارمنستان.mw
+++ b/ارمنستان.mw
@@ -11,7 +11,7 @@ national_motto = ''none'' |
 پلازمېنه = [[Yerevan]] |latd=40|latm=16|latNS=N|longd=44|longm=34|longEW=E|
 د حکومت بڼه =  [[جمهوريت]] |
 د لارښود لقب = [[د ارمنستان ولسمشر|ولسمشر]]<br /> [[د ارمنستان لومړی وزير|لومړی وزير]] |
-د لارښود نوم= [[Robert Kocharian]]<br /> [[Andranik Markaryan]] |
+د لارښود نوم= [[Serzh Sargsyan]]<br /> [[Tigran Sargsyan]] |
 لوی ښار= [[Yerevan]] |
 مساحت = 29,800 |
 areami² = 11,506 | <!--Do not remove -->
