--- a/قرآن_کریم.mw
+++ b/قرآن_کریم.mw
@@ -149,9 +149,8 @@
 # تعارف مذاهب عالم، ليكوال: ډاكټر اېس. اېم شاهد- سركلر روډ اردو بازار لاهور
 # [http://ar.wikipedia.org ar.wikipedia.org]
 # [http://www.islamonline.net www.islamonline.net]
-# [http://www.irfan-ul-quran.com www.irfan-ul-Quran.com]
 
-[[وېشنيزه:اسماني کتابونه]]
+وېشنيزه:اسماني کتابونه]]
 [[وېشنيزه:ديني ليکنې]]
 
 [[af:Koran]]
