--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -67,9 +67,9 @@
 
 ډاکټر غني په تېرو دوو کلونو کي د نړيوالو موسساتو په غوښتنه د سوډان، کوسوو او نيپال دولتونو ته مشورې ورکړي دي.
 
-همدا راز ډاکټر صاحب له يوې بلي تحقيقاتي او مشورتي موسسې سره چي د معاصرو دولتونو جوړېدو د ادارې په نامه منځته راغلې دنده پر مخ يوړه، دا موسسه د کاميابو دولتونو هغه تجربې او تګلاري چي د ناکامو دولتونو له ځينو شرايطو سره سمون خوري او ناکام دولتونه ورته اړتيا لري، تر څېړني لاندي نيسي.
+همدا راز ډاکټر اشرف غني احمدزی له يوې بلي تحقيقاتي او مشورتي موسسې سره چي د معاصرو دولتونو جوړېدو د ادارې په نامه منځته راغلې دنده پر مخ يوړه، دا موسسه د کاميابو دولتونو هغه تجربې او تګلاري چي د ناکامو دولتونو له ځينو شرايطو سره سمون خوري او ناکام دولتونه ورته اړتيا لري، تر څېړني لاندي نيسي.
 
-دا چي ډاکټر غني په تېرو څلورو کلونو کي له دولته بهر و په ډېرو نړيوالو کمېسيونونو کي يې برخه اخيستې چي له هغې جملې څخه يو د ملګرو ملتونو د قانون له نظره د بېوزلو خلکو بسيا کول نومېږي. په دې موده کي نوموړى د امريکې د وکيلانو د نړيوال عدالت په پروګرام کي د قانون د حاکميت د پروژې د عالي مشورتي کمېټې غړى و، همدا رنګه د بروکنګ د موسسې (په نړۍ کي د امن او سولي د راتګ) د پروژې د عالي کمېټې غړيتوب يې هم درلود. او د دې په خوا کي يې نوري ډېري بشري چاري هم سرته رسولي چي د ټولو بيانول په دې لنډه ليکنه کي ناممکن دي.
+دا چي ډاکټر غني احمدزی په تېرو څلورو کلونو کي له دولته بهر و په ډېرو نړيوالو کمېسيونونو کي يې برخه اخيستې چي له هغې جملې څخه يو د ملګرو ملتونو د قانون له نظره د بېوزلو خلکو بسيا کول نومېږي. په دې موده کي نوموړى د امريکې د وکيلانو د نړيوال عدالت په پروګرام کي د قانون د حاکميت د پروژې د عالي مشورتي کمېټې غړى و، همدا رنګه د بروکنګ د موسسې (په نړۍ کي د امن او سولي د راتګ) د پروژې د عالي کمېټې غړيتوب يې هم درلود. او د دې په خوا کي يې نوري ډېري بشري چاري هم سرته رسولي چي د ټولو بيانول په دې لنډه ليکنه کي ناممکن دي.
 
 
 
