--- a/البانیا.mw
+++ b/البانیا.mw
@@ -291,6 +291,7 @@ At the height of the Ottoman occupation, the majority of [[Albanians]] were most
 [[de:Albanien]]
 [[diq:Arnawutiye]]
 [[dsb:Albańska]]
+[[ee:Albania]]
 [[el:Αλβανία]]
 [[en:Albania]]
 [[eo:Albanio]]
