--- a/الجزایر.mw
+++ b/الجزایر.mw
@@ -259,7 +259,7 @@ In philosophy and the humanities, [[Malek Bennabi]] and [[Frantz Fanon]] are not
 [[lb:Algerien]]
 [[li:Algerieë]]
 [[lij:Algeïa]]
-[[lmo:Algèria]]
+[[lmo:Algeria]]
 [[ln:Aljeria]]
 [[lt:Alžyras]]
 [[lv:Alžīrija]]
@@ -269,7 +269,7 @@ In philosophy and the humanities, [[Malek Bennabi]] and [[Frantz Fanon]] are not
 [[ms:Algeria]]
 [[mzn:الجزایر]]
 [[na:Algeria]]
-[[nah:Arxellān]]
+[[nah:Argelia]]
 [[nds:Algerien]]
 [[nl:Algerije]]
 [[nn:Algerie]]
