--- a/اندورا.mw
+++ b/اندورا.mw
@@ -203,6 +203,7 @@ Andorra's long [[history]] has provided it with a rich [[mythology]] and an abun
 [[diq:Andorra]]
 [[dsb:Andorra]]
 [[dv:އެންޑޯރާ]]
+[[ee:Andorra]]
 [[el:Ανδόρρα]]
 [[en:Andorra]]
 [[eo:Andoro]]
