robot  Adding: [[sq:Bakteriologjia]]

--- a/باکټريا.mw
+++ b/باکټريا.mw
@@ -134,6 +134,7 @@
 [[simple:Bacteria]]
 [[sk:Baktérie]]
 [[sl:Bakterije]]
+[[sq:Bakteriologjia]]
 [[sr:Бактерија]]
 [[su:Baktéri]]
 [[sv:Bakterier]]
