robot  Adding: [[oc:Avicena]]

--- a/ابن_سينا_بلخي.mw
+++ b/ابن_سينا_بلخي.mw
@@ -306,6 +306,7 @@
 [[ms:Abu Ali Al-Hussain Ibn Abdallah Ibn Sina]]
 [[nl:Avicenna]]
 [[no:Avicenna]]
+[[oc:Avicena]]
 [[pl:Awicenna]]
 [[pt:Avicena]]
 [[ro:Avicenna]]
