--- a/هند.mw
+++ b/هند.mw
@@ -749,7 +749,7 @@ India's national sport is [[field hockey]] though [[cricket]] is the most popula
 [[sco:Indie]]
 [[se:India]]
 [[sh:Indija]]
-[[si:ඉන්දියාව]]
+[[si:භාරත් ජනරජය]]
 [[simple:India]]
 [[sk:India]]
 [[sl:Indija]]
