--- a/موزامبیق.mw
+++ b/موزامبیق.mw
@@ -356,6 +356,7 @@ The wide range of religious affiliations can be partially attributed to the wide
 [[ro:Mozambic]]
 [[ru:Мозамбик]]
 [[sa:मोजम्बीक]]
+[[sah:Мозамбик]]
 [[sc:Mozambighe]]
 [[scn:Mozambicu]]
 [[se:Mosambik]]
