--- a/پرتګال.mw
+++ b/پرتګال.mw
@@ -457,6 +457,7 @@ Saint Anthony is celebrated on the [[June 13|13th]], mainly in Lisbon and Saint 
 [[dsb:Portugalska]]
 [[dv:ޕޯޗުގަލް]]
 [[dz:པོར་ཅུ་གལ་]]
+[[ee:Portugal]]
 [[el:Πορτογαλία]]
 [[en:Portugal]]
 [[eo:Portugalio]]
