robot  Adding: [[sah:Сейшеллар]]

--- a/سیشل.mw
+++ b/سیشل.mw
@@ -324,6 +324,7 @@ The marine life around the islands, especially the more remote coral islands, ca
 [[ro:Seychelles]]
 [[ru:Сейшелы]]
 [[sa:सेशेल]]
+[[sah:Сейшеллар]]
 [[sc:Seychelles]]
 [[se:Seychellsullot]]
 [[sh:Sejšeli]]
