robot  Adding: [[sah:Сомалия]]

--- a/سومالیا.mw
+++ b/سومالیا.mw
@@ -347,6 +347,7 @@ Companies providing telecommunication services are:
 [[ro:Somalia]]
 [[ru:Сомали]]
 [[sa:सोमालिया]]
+[[sah:Сомалия]]
 [[sc:Somàlia]]
 [[scn:Somalia]]
 [[se:Somália]]
