robot  Adding: [[bm:Banaw]], [[bs:Bolest]] Modifying: [[cy:Afiechyd]]

--- a/ناروغي.mw
+++ b/ناروغي.mw
@@ -83,10 +83,12 @@ A disease can also be caused by repeated high anger or stress.
 [[ay:Usu]]
 [[bat-smg:Lėga]]
 [[bg:Болест]]
+[[bm:Banaw]]
 [[br:Kleñved]]
+[[bs:Bolest]]
 [[ca:Malaltia]]
 [[cs:Nemoc]]
-[[cy:Clefyd]]
+[[cy:Afiechyd]]
 [[da:Sygdom]]
 [[de:Krankheit]]
 [[en:Disease]]
