--- a/اریتریا.mw
+++ b/اریتریا.mw
@@ -322,6 +322,7 @@ See also [[Eritrean Orthodox Church]].
 [[roa-rup:Eritrea]]
 [[ru:Эритрея]]
 [[sa:एरिट्रिया]]
+[[sah:Эритрея]]
 [[sc:Eritrea]]
 [[scn:Eritria]]
 [[se:Eritrea]]
