robot  Modifying: [[tr:Abdülkâdir Geylânî]]

--- a/عبدالقادر_گيلاني.mw
+++ b/عبدالقادر_گيلاني.mw
@@ -107,6 +107,6 @@
 [[ku:Evdilqadirê Geylanî]]
 [[pt:Abdul-Qadir Gilani]]
 [[te:అబ్దుల్ ఖాదిర్ జీలాని]]
-[[tr:Abdülkadir Geylani]]
+[[tr:Abdülkâdir Geylânî]]
 [[uk:Абдул Кадір Ґілані]]
 [[ur:شيخ عبدالقادر جيلانی]]
