--- a/روسیه.mw
+++ b/روسیه.mw
@@ -115,7 +115,7 @@
 [[mt:Russja]]
 [[myv:Россия Мастор]]
 [[na:Russia]]
-[[nah:Rusia]]
+[[nah:Rusitlālpan]]
 [[nds:Russland]]
 [[nds-nl:Ruslaand]]
 [[ne:रसिया]]
