*Empty MediaWiki Message*

--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -53,7 +53,7 @@
 
 تر کنفرانس وروسته نوموړى د يادي شوي ادارې له خوا بېړنۍ لويي جرګې ته د ماليې د وزير په توګه وپېژندل شو، چي جرګې دا وړانديز ومانه او ښاغلى ډاکتر اشرف غني د انتقالي دورې د ماليې د وزير په حيث مقرر شو.
 
-'''د هېرولو نه ده چي''' دا وخت د افغانستان مالي او پولي سياست جګړو دومره ځپلى و، چي د نړۍ په کوم بل هيواد کي يې سارى نه شو ليدل کېداى، خو ډاکټر غني وتوانېده چي د ګمرکونو او عوايدو په مرکزي کولو کي د امنيت شورا فيصله يوازي په شپږو اونيو کي عملي کړي او د پولي او مالي سياست په برخه کي بنسټيز اصلاحات رامنځته کړي. د دې ترڅنګ يې د هيواد عمده ولايتونو ته سفرونه وکړل او د ملي پيوستون، مخابراتو او صحي پروګرامونو په ترتيب او له نورو وزارتونو سره د اړيکو په تنظيم کي يې اغېزمن رول ولوباوه، د هيواد په دننه کي يې د مالي چارو د تنظيم په موخه کاري پلانونه ترتيب کړل او له هيواده بهر يې هم د نړۍ د خبرولو لپاره د يادولو وړ ګامونه واخيستل، چي يو مهم کار يې د توکيو کنفرانس لپاره افغان دولت ته د يوې داسي بيانيې او پروګرام تيارول و چي نړۍ يې له افغانستان سره د مرستي کولو ته قانع کړه. ورپسې د برلين د کنفرانس وار راغئ، او دا وخت نړۍ غوښتل افغانستان ته يوازي يو ميليارډ ډالره مرسته ورکړي، اما د وخت د ماليې د وزير پرله پسې هڅي وې چي نړۍ حاضره شوه، په هماغه کنفرانس کي له افغان حکومت سره د ٢، ٨ ميليارډو ډالرو مرستي ژمنه وکړي، په عين حال کي نړۍ دا هم ومنله چي په افغانستان کي ٥، ٢٦ ميليارډو ډالرو بهرنۍ پانګوني ته اړتيا ده، د افغانستان په ټول تاريخ کي دا يو بېسارى کنفرانس و چي يو نېستمن او جګړه ځپلي هيواد وکولاى شول، خپل د بيا رغوني پروګرامونه وړاندي کړي او نړۍ پرې قانع کړي.
+ دا وخت د افغانستان مالي او پولي سياست جګړو دومره ځپلى و، چي د نړۍ په کوم بل هيواد کي يې سارى نه شو ليدل کېداى، خو ډاکټر غني وتوانېده چي د ګمرکونو او عوايدو په مرکزي کولو کي د امنيت شورا فيصله يوازي په شپږو اونيو کي عملي کړي او د پولي او مالي سياست په برخه کي بنسټيز اصلاحات رامنځته کړي. د دې ترڅنګ يې د هيواد عمده ولايتونو ته سفرونه وکړل او د ملي پيوستون، مخابراتو او صحي پروګرامونو په ترتيب او له نورو وزارتونو سره د اړيکو په تنظيم کي يې اغېزمن رول ولوباوه، د هيواد په دننه کي يې د مالي چارو د تنظيم په موخه کاري پلانونه ترتيب کړل او له هيواده بهر يې هم د نړۍ د خبرولو لپاره د يادولو وړ ګامونه واخيستل، چي يو مهم کار يې د توکيو کنفرانس لپاره افغان دولت ته د يوې داسي بيانيې او پروګرام تيارول و چي نړۍ يې له افغانستان سره د مرستي کولو ته قانع کړه. ورپسې د برلين د کنفرانس وار راغئ، او دا وخت نړۍ غوښتل افغانستان ته يوازي يو ميليارډ ډالره مرسته ورکړي، اما د وخت د ماليې د وزير پرله پسې هڅي وې چي نړۍ حاضره شوه، په هماغه کنفرانس کي له افغان حکومت سره د ٢، ٨ ميليارډو ډالرو مرستي ژمنه وکړي، په عين حال کي نړۍ دا هم ومنله چي په افغانستان کي ٥، ٢٦ ميليارډو ډالرو بهرنۍ پانګوني ته اړتيا ده، د افغانستان په ټول تاريخ کي دا يو بېسارى کنفرانس و چي يو نېستمن او جګړه ځپلي هيواد وکولاى شول، خپل د بيا رغوني پروګرامونه وړاندي کړي او نړۍ پرې قانع کړي.
 
 د پورتنيو ښو کارنامو په پايله کي په ٢٠٠٣ ميلادي کال ښاغلى ډاکټر غني د آسيا د ممتاز او کامياب ماليې وزير په توګه وپېژندل شو، چي د کال د وزير جايزه يې هم ترلاسه کړه.
 وروسته د انتقالي دولت دوره پايى ته ورسېده، خو ډاکټر محمداشرف غني ونه غوښتل چي په بله کابينه کي ګډون وکړي او د لوړو زدکړو د بهير د اصلاح په منظور يې د کابل پوهنتون د بيا رغوني چارو ته مخه کړه. پوره يو کال يې د کابل پوهنتون له استادانو او محصلينو سره کاري ليدني کتني وکړې او په دې چوکاټ کي يې د اساسي جوړوني پايله ترلاسه کړه، چي يوه اندازه لومړنۍ او ضروري مرستي ترلاسه شوې.
